test/e2e/pass/generics/decl_param_where.cst
fn add(a: num) -> num where decl(a + a) {
    a + a
}

fn main() -> num {
    add(3);
    0
}
