test/e2e/fail_compile/generics/where_non_constraint_type.cst
fn id<T>(value: T) -> T where 1 {
    value
}

fn main() -> num {
    id(1)
}
